# hdmi-cec-mqtt

./: LICENSE  README.md  entry_points.cfg  setup.cfg
cecmqtt/: daemon.py  main.py
