[metadata]
name = cec-mqtt
version = 0.0.1
author = Mitsuharu Kurita
author_email = meekn@users.noreply.github.com
description = MQTT client daemon for HDMI-CEC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/meekn/hdmi-cec-mqtt
license = MIT

[options]
install_requires =
  cec
  paho-mqtt
  bidict
  click
include_package_data = True
packages = find:
entry_points = file: entry_points.cfg

[options.package_data]
cecmqtt = data/mqtt.beebotte.com.pem
